; ModuleID = '/home/carl/AnghaBench/openpilot/selfdrive/visiond/cameras/extr_camera_qcom.c_front_start.c'
source_filename = "/home/carl/AnghaBench/openpilot/selfdrive/visiond/cameras/extr_camera_qcom.c_front_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@start_reg_array = common dso_local global i32 0, align 4
@MSM_CAMERA_I2C_BYTE_DATA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"sensor start regs: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @front_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @front_start(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @set_exposure(i32* %4, double 1.000000e+00, double 1.000000e+00)
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @start_reg_array, align 4
  %8 = load i32, i32* @start_reg_array, align 4
  %9 = call i32 @ARRAYSIZE(i32 %8)
  %10 = load i32, i32* @MSM_CAMERA_I2C_BYTE_DATA, align 4
  %11 = call i32 @sensor_write_regs(i32* %6, i32 %7, i32 %9, i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @LOG(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %12)
  ret void
}

declare dso_local i32 @set_exposure(i32*, double, double) #1

declare dso_local i32 @sensor_write_regs(i32*, i32, i32, i32) #1

declare dso_local i32 @ARRAYSIZE(i32) #1

declare dso_local i32 @LOG(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
